Remove support for actions/rpc/notifications, take two
The concepts underlying what we are doing here are gone from MD-SAL.
Update the version of the XML namespace and remove support for
- action-implementation
- action-instance
- notification-listener
- rpc-implementation
- rpc-service
- specific-reference-list
- static-reference

JIRA: CONTROLLER-2090
Change-Id: Ic9777d1d6295da3f31da7b22d816c0fc9ba9565e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>